--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.13.1",
     "mongoose": "^8.5.2",
+    "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "unidecode": "^1.1.0"
   }
 }
