--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.13.1",
     "mongoose": "^8.5.2",
+    "mongoose-slug-generator": "^1.0.4",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
