--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "unidecode": "^1.1.0"
   }
